# logic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  logic-linux64
include/logic/: base.h  levels.h  player.h
src/: levels.c  main.c  player.c
